Bug 516185 - application menu pops up at a wrong position
Summary: application menu pops up at a wrong position
Status: CLOSED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: appmenu (other bugs)
Version First Reported In: 6.6.0
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 515883 516254 516421 516422 516434 516535 516614 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-02-18 09:33 UTC by Ronald
Modified: 2026-03-04 03:41 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.1
Sentry Crash Report:


Attachments
appmenu (341.42 KB, image/png)
2026-02-18 13:02 UTC, Ronald
Details
tray icon context menu (124.14 KB, image/png)
2026-02-18 13:03 UTC, Ronald
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ronald 2026-02-18 09:33:01 UTC
SUMMARY
application menu pops up at a wrong position

STEPS TO REPRODUCE
1. click the application menu button on bottom/left, or press the key "win"

OBSERVED RESULT

the application menu pops up at bottom right

EXPECTED RESULT

the application menu pops up at bottom left

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-arch1-2 (64-bit)
Graphics Platform: Wayland
Graphics Processor 1: AMD Radeon 780M Graphics
Graphics Processor 2: NVIDIA GeForce RTX 4070 Laptop GPU/PCIe/SSE2

ADDITIONAL INFORMATION
laptop with an external monitor
the laptop built-in display is disabled
though the built-in display is disabled, there are two cases:
1. if the lid of laptop is opened, the application menu pops up at the right position (bottom-left)
2. if the lid of laptop is closed, the application menu pops up at a wrong position (bottom-right)
Comment 1 Ronald 2026-02-18 09:36:55 UTC
more, right click on a tray icon, the context menu pops up at a horizontally mirrored position
Comment 2 Vlad Zahorodnii 2026-02-18 09:38:35 UTC
It doesn't happen here. Do you have mirrored outputs or something? Can you please provide more details?
Comment 3 David Edmundson 2026-02-18 11:39:51 UTC
marking as needsinfo based on #2, please reopen when that's provided.

A screenshot (photo is fine) would also be useful.
Comment 4 Ronald 2026-02-18 13:02:44 UTC
Created attachment 189739 [details]
appmenu
Comment 5 Ronald 2026-02-18 13:03:18 UTC
Created attachment 189740 [details]
tray icon context menu
Comment 6 Ronald 2026-02-18 13:07:23 UTC
(In reply to Vlad Zahorodnii from comment #2)
> It doesn't happen here. Do you have mirrored outputs or something?
No mirrored outputs
> Can you please provide more details?
No problem before updating to plasma 6.6.0 today

@Zahorodnii
Comment 7 Vlad Zahorodnii 2026-02-18 14:32:18 UTC
If you restart plasmashell, the issue goes away, right? systemctl restart --user plasma-plasmashell
Comment 8 Vlad Zahorodnii 2026-02-18 14:41:43 UTC
I can confirm a similar issue, not exactly sure if it's the same one though.
Comment 9 Bug Janitor Service 2026-02-18 14:56:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6309
Comment 10 Ronald 2026-02-18 16:13:56 UTC
(In reply to Vlad Zahorodnii from comment #7)
> If you restart plasmashell, the issue goes away, right? systemctl restart
> --user plasma-plasmashell

Yes
Comment 11 Vlad Zahorodnii 2026-02-18 17:52:35 UTC
Okay then it's the same issue. Thanks!
Comment 12 Vlad Zahorodnii 2026-02-19 09:19:17 UTC
Git commit d1b410a3a6dc7d0869076b60ef630d6b642014fb by Vlad Zahorodnii.
Committed on 19/02/2026 at 08:57.
Pushed by vladz into branch 'master'.

shell: Restore setPosition() in PanelView

Popups (that are not placed using semantic positioning hints) still
require somewhat reasonable global coordinates because plasmashell
sets the QT_WAYLAND_DISABLE_FIXED_POSITIONS environment variable.
Related: bug 514081

M  +8    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d1b410a3a6dc7d0869076b60ef630d6b642014fb
Comment 13 Vlad Zahorodnii 2026-02-19 10:05:34 UTC
Git commit efb08cee3abc8e48a2097fcdd48eeee193ec439c by Vlad Zahorodnii.
Committed on 19/02/2026 at 09:43.
Pushed by vladz into branch 'Plasma/6.6'.

shell: Restore setPosition() in PanelView

Popups (that are not placed using semantic positioning hints) still
require somewhat reasonable global coordinates because plasmashell
sets the QT_WAYLAND_DISABLE_FIXED_POSITIONS environment variable.
Related: bug 514081
(cherry picked from commit d1b410a3a6dc7d0869076b60ef630d6b642014fb)

M  +8    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/efb08cee3abc8e48a2097fcdd48eeee193ec439c
Comment 14 Nate Graham 2026-02-20 16:22:34 UTC
*** Bug 516254 has been marked as a duplicate of this bug. ***
Comment 15 Błażej Szczygieł 2026-02-20 23:49:45 UTC
*** Bug 516422 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2026-02-23 19:59:01 UTC
*** Bug 516614 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2026-02-23 20:11:07 UTC
*** Bug 516434 has been marked as a duplicate of this bug. ***
Comment 18 Nate Graham 2026-02-23 20:19:56 UTC
*** Bug 516421 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2026-02-25 01:22:11 UTC
*** Bug 515883 has been marked as a duplicate of this bug. ***
Comment 20 TraceyC 2026-02-25 23:18:25 UTC
*** Bug 516535 has been marked as a duplicate of this bug. ***