shell: Restore setPosition() in PanelView

Popups (that are not placed using semantic positioning hints) still
require somewhat reasonable global coordinates because plasmashell
sets the QT_WAYLAND_DISABLE_FIXED_POSITIONS environment variable.

BUG: 516185
CCBUG: 514081
(cherry picked from commit d1b410a3a6dc7d0869076b60ef630d6b642014fb)